# mcp-proxmox

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  pyproject.toml  server.json
.github/workflows/: ci.yml  docker.yml  publish.yml
src/mcp_proxmox/: __init__.py  client.py  config.py  server.py
src/mcp_proxmox/tools/: __init__.py  backup.py  discovery.py  execute.py  firewall.py  lifecycle.py  migration.py  monitoring.py  network.py  provisioning.py  resize.py  snapshots.py  storage.py  templates.py
tests/: conftest.py  sample_data.py  test_backup.py  test_discovery.py  test_execute.py  test_firewall.py  test_lifecycle.py  test_migration.py  test_network.py  test_provisioning.py  test_resize.py  test_snapshots.py  test_storage.py  test_templates.py
